# devcontainer-python

./: pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
playground/: kfold_mccv.ipynb
