[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["supernovalx <hoanganhgo9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.23.2"
ipywidgets = "^8.0.6"
tqdm = "^4.65.0"
pandas = "^2.0.2"
numpy = "^1.25.0"
matplotlib = "^3.7.1"
plotly = "^5.15.0"
seaborn = "^0.12.2"
black = "^23.3.0"
scikit-learn = "^1.2.2"
nbformat = "^5.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
